# car_avm_rvc

./: .gitignore  README.md  README.txt  gradle.properties  local.properties
app/: build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/softwinner/dvr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: modle_s.param
app/src/main/assets/common/: 8255.txt
app/src/main/cpp/: CMakeLists.txt  avm_cam.h  avm_cam_jni.cpp
app/src/main/java/com/megaview/avm/: AVM.java
app/src/main/java/com/megaview/ghost/: Ghost.java
app/src/main/java/com/openadas/ai/: Ai.java
app/src/main/java/com/softwinner/dvr/bean/: ImageInfo.java  VideoInfo.java
app/src/main/java/com/softwinner/dvr/camera/: BaseCamera.java  CameraFactory.java  CameraListener.java  FourCSICamera.java  FourCvbsCamera.java  NormalCamera.java  TwoCSICamera.java
app/src/main/java/com/softwinner/dvr/common/: Constant.java  DVRApplication.java  DVRPreference.java  VideoThumbLoader.java
app/src/main/java/com/softwinner/dvr/dao/: DaoMaster.java  DaoSession.java  ImageFile.java  ImageFileDao.java  VideoFile.java  VideoFileDao.java
app/src/main/java/com/softwinner/dvr/dvr/: BaseDVR.java  DVRBuilder.java  FourCameraDVR.java  OneCameraDVR.java  RecordListener.java  TwoCameraDVR.java
app/src/main/java/com/softwinner/dvr/media/: RecordManager.java  RecordService.java
app/src/main/java/com/softwinner/dvr/permission/: Permissions.java  PermissionsManager.java  PermissionsResultAction.java
app/src/main/java/com/softwinner/dvr/ui/activity/: AboutActivity.java  AppStatusManager.java  BaseActivity.java  ChoiceCameraActivity.java  CornerActivity.java  DebugActivity.java  FileActivity.java  ImageActivity.java  LenActivity.java  RecordActivity.java  RenderThread.java  SettingsActivity.java  VideoPlayerActivity.java
app/src/main/java/com/softwinner/dvr/ui/adapter/: FileFragmentPagerAdapter.java  ImageFileAdapter.java  SettingsFragmentPagerAdapter.java  VideoFileAdapter.java
app/src/main/java/com/softwinner/dvr/ui/fragment/: BackCameraSettingsFragment.java  CameraDrawer.java  CameraView.java  FourPreviewFragment.java  FrontCameraSettingsFragment.java  ImageFileFragment.java  LeftCameraSettingsFragment.java  NormalSettingsFragment.java  OnePreviewFragment.java  RightCameraSettingsFragment.java  TwoPreviewFragment.java  VideoFileFragment.java
app/src/main/java/com/softwinner/dvr/ui/receiver/: AutoStartReceiver.java  StorageReceiver.java  UsbCameraStateReceiver.java
app/src/main/java/com/softwinner/dvr/util/: FileUtils.java  Logger.java  StorageUtils.java  Utils.java
app/src/main/java/com/softwinner/dvr/widget/: BionIndicator.java  BionRecyclerView.java  DividerGridItemDecoration.java  VerticalViewPager.java
app/src/main/res/drawable/: bg_button_center.xml  bg_button_left.xml  bg_button_right.xml  divider_bg.xml  ic_record.xml
app/src/main/res/layout/: activity_about.xml  activity_choice_camera.xml  activity_corner.xml  activity_debug.xml  activity_file.xml  activity_image.xml  activity_len.xml  activity_main.xml  activity_record.xml  activity_settings.xml  float_layout.xml  fragment_back_cameral_settings.xml  fragment_four_preview.xml  fragment_front_cameral_settings.xml  fragment_image_file.xml  fragment_normal_settings.xml  fragment_one_preview.xml  fragment_two_preview.xml  fragment_video_file.xml  item_image_file.xml  item_video_file.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: arrays.xml  attrs.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: arrays.xml  string.xml
app/src/main/res/xml/: content_provider_path.xml
app/src/test/java/com/softwinner/dvr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
